# gnuradio-engineering-competition

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.original  build.sh  check_output.py  perfCounter_vv002_cr35l.py  q  sane_build.sh  single.py  test.py  testvideo.ts  vv002_cr35l.grc  vv002_cr35l.py  vv002_cr35l.py.bak  vv002_cr35l_original.grc
cmake/Modules/: GrBuildTypes.cmake
engineering-competition/: GNURadioInstallDoku.txt  Note  NützlicheDebuggingKommandos.txt  compile.md  dev_process.xlsx  documentation  gdb.md  ldpc_arrays.txt  merge_bch_ldpc.txt  placeholder  test.txt  things_done.txt  valgrind
engineering-competition/dokumentation/: optimierungen.txt
engineering-competition/presort/: sort.py  sorted.txt
engineering-competition/scripts/: vv002_cr35l (all Times with Repetitions).py  vv002_cr35l(all Times without Repetitions).py  vv002_cr35l(one Time with Repetitions).py  vv002_cr35l(sumTime with Repetitons).py  vv002_cr35l.py
gnuradio-runtime/include/gnuradio/: types.h
gr-competition/: CMakeLists.txt  MANIFEST.md
gr-competition/cmake/Modules/: competitionConfig.cmake
gr-competition/docs/: README.competition
gr-competition/docs/doxygen/: Doxyfile.in
gr-competition/grc/: CMakeLists.txt  competition_competition.xml
gr-competition/include/competition/: CMakeLists.txt  api.h  competition.h
gr-competition/lib/: CMakeLists.txt  competition_impl.cc  competition_impl.h  qa_competition.cc  qa_competition.h  test_competition.cc
gr-competition/python/: CMakeLists.txt  __init__.py  qa_competition.py
gr-competition/swig/: CMakeLists.txt  competition_swig.i
gr-digital/lib/: ofdm_cyclic_prefixer_impl.cc
gr-dtv/: CMakeLists.txt
gr-dtv/grc/: CMakeLists.txt  dtv_block_tree.xml  dtv_competition.xml  dtv_dvb_bch_ldpc_bb.xml
gr-dtv/lib/: CMakeLists.txt  competition_impl.cc  competition_impl.h  dvbt2_encoder_comp_impl.cc  dvbt2_encoder_comp_impl.h  gr_timer.cc  gr_timer.h
gr-dtv/lib/dvb/: .directory  .dvb_bch_bb_impl.cc.swp  .dvb_bch_bb_impl.h.swp  .dvb_ldpc_bb_impl.cc.swp  PerfCounter.h  dvb_bbheader_bb_impl.cc  dvb_bbheader_bb_impl.h  dvb_bbscrambler_bb_impl.cc  dvb_bbscrambler_bb_impl.h  dvb_bch_bb_impl.cc  dvb_bch_bb_impl.h  dvb_bch_bb_impl_new.cc  dvb_bch_bb_impl_union.cc  dvb_bch_bb_impl_union.h  dvb_bch_ldpc_bb_impl.cc  dvb_bch_ldpc_bb_impl.h  dvb_defines.h  dvb_ldpc_bb_impl.cc  dvb_ldpc_bb_impl.cc.orig  dvb_ldpc_bb_impl.h  dvb_ldpc_bb_impl_lut.h  dvb_ldpc_bb_impl_new.cc  dvb_ldpc_bb_impl_new.h  dvb_ldpc_bb_lookup_table.h  ldpc_encode_lookup_table.cpp  ldpc_encode_lookup_table.h  performancetimer.h  thread_pool.cc  thread_pool.h
gr-dtv/lib/dvbt2/: .dvbt2_framemapper_cc_impl.cc.swp  dvbt2_cellinterleaver_cc_impl.cc  dvbt2_cellinterleaver_cc_impl.h  dvbt2_framemapper_cc_impl.cc  dvbt2_freqinterleaver_cc_impl.cc  dvbt2_interleaver_bb_impl.cc  dvbt2_interleaver_bb_impl.h  dvbt2_miso_cc_impl.cc  dvbt2_modulator_bc_impl.cc  dvbt2_modulator_bc_impl.h  dvbt2_p1insertion_cc_impl.cc  dvbt2_paprtr_cc_impl.cc  (+2 more)
gr-dtv/swig/: dtv_swig.i
gr-fec/lib/: cldpc.cc  ldpc_encoder_impl.cc
(+9 files in other folders)
